syntax = "proto3";

package auth;

import "google/api/annotations.proto";

option go_package = "github.com/Novip1906/tasks-grpc/auth/gen";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
            post: "/auth/login"
            body: "*"
        };
    }
    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/auth/register"
            body: "*"
        };
    }
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc ValidateVerificationCode(ValidateCodeRequest) returns (ValidateCodeResponse) {
        option (google.api.http) = {
            post: "/auth/validate-code"
            body: "*"
        };
    }
    rpc ChangeEmail(ChangeEmailRequest) returns (ChangeEmailResponse) {
        option (google.api.http) = {
            post: "/auth/change-email"
            body: "*"
        };
    }
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    int64 userId = 1;
    string username = 2;
    string email = 3;
}

message ValidateCodeRequest {
    string email = 1;
    string code = 2; 
}

message ValidateCodeResponse {}

message ChangeEmailRequest {
    string newEmail = 1;
}

message ChangeEmailResponse {}

// protoc -I . -I third_party/googleapis \
//   --go_out=. --go_opt=paths=source_relative \
//   --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//   --grpc-gateway_out=. --grpc-gateway_opt=paths=source_relative \
//   auth.proto