syntax = "proto3";

package tasks;

option go_package = "github.com/Novip1906/tasks-grpc/tasks/gen";

service TasksService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
    rpc GetTask(GetTaskRequest) returns (Task);
    rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message CreateTaskRequest {
    string text = 1;
}

message CreateTaskResponse {
    Task task = 1;
}

message GetTaskRequest {
    int64 taskId = 1;
}

message Task {
    int64 id = 1;
    string text = 2;
    string authorName = 3;
    int64 createdAt = 4;
}

message GetAllTasksRequest {

}

message GetAllTasksResponse {
    repeated Task tasks = 1;
}

message UpdateTaskRequest {
    int64 taskId = 1;
    string newText = 2;
}

message UpdateTaskResponse {
    
}

message DeleteTaskRequest {
    int64 taskId = 1;
}

message DeleteTaskResponse {
    Task task = 1;
}
// export PATH=$PATH:$(go env GOPATH)/bin
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative tasks.proto